# spritefusion-pixel-snapper

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  USER_STORIES.md  index.html
docs/: CONFIG.md
docs/superpowers/plans/: 2026-07-22-phase1-detectors.md  2026-07-22-phase2-resample.md  2026-07-22-phase3-quantize.md  2026-07-23-phase3-cleanup.md  2026-07-24-phase4-postprocess.md
docs/superpowers/specs/: 2026-07-22-phase1-detectors-design.md  2026-07-22-phase2-resample-design.md  2026-07-22-phase3-quantize-design.md  2026-07-23-phase3-cleanup-design.md  2026-07-24-phase4-postprocess-design.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-24/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
schema/: pipeline-config.schema.json
schema/presets/: ai-character-cleanup.json
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  palette.rs  profile.rs  quantize.rs  resample.rs  stabilize.rs  validate.rs
src/cli/: args.rs  batch.rs  cli_tests.rs  mod.rs
src/detect/: elastic.rs  mod.rs  runs.rs  tiled.rs
src/quantize/: dither.rs  kmeans.rs  mod.rs  oklab.rs  palettes.rs
src/resample/: dominant.rs  majority.rs  median.rs  mod.rs  mode.rs  qvote.rs
tests/: detect.rs  quantize.rs  resample.rs
